# mobile_lumiora_1

./: docker-compose.yml
data_pipeline/: Dockerfile  pipeline.py  requirements.txt
lumiora-backend/: docker-compose.yml  dockerfile  package-lock.json  package.json  server.js
lumiora-backend/database/: init.sql
lumiora_cms/: .dockerignore  .env.docker  .env.example  .gitignore  API_INTEGRATION_GUIDE.md  DOCKER_SETUP.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  manage.py  nginx.conf  pipeline.py  pyproject.toml  requirements.txt  run.bat  seed_data.py  setup.bat  setup.py
lumiora_cms/app/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
lumiora_cms/app/migrations/: 0001_initial.py
lumiora_cms/app/templates/: base.html  cms_home.html  orders.html  pipeline_view.html
lumiora_cms/app/templates/admin/: base_site.html
lumiora_cms/lumiora_cms/: asgi.py  settings.py  urls.py  wsgi.py
mobile_lumiora/: .gitignore  README.md  pubspec.yaml
mobile_lumiora/android/app/: build.gradle.kts
mobile_lumiora/ios/Runner/: Info.plist
mobile_lumiora/ios/Runner.xcodeproj/: project.pbxproj
mobile_lumiora/lib/: main.dart
mobile_lumiora/lib/models/: menu_item.dart
mobile_lumiora/lib/screens/: cart_screen.dart  checkout_screen.dart  history_screen.dart  login_screen.dart  menu_screen.dart  profile_screen.dart  splash_screen.dart
mobile_lumiora/linux/: CMakeLists.txt
mobile_lumiora/test/: widget_test.dart
mobile_lumiora/web/: index.html  manifest.json
mobile_lumiora/windows/: CMakeLists.txt
(+14 files in other folders)
