[project]
name = "lumiora-cms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.0.6",
    "django-cors-headers==4.3.1",
    "djangorestframework==3.14.0",
    "gunicorn==21.2.0",
    "pillow==12.2.0",
    "python-decouple==3.8",
    "requests==2.31.0",
    "wheel>=0.47.0",
]
